# quant-research

./: .gitignore  README.md
data-sync-tool/: Cargo.toml  README.md
data-sync-tool/data/: out.txt  stock_list.json  stock_list1.json  test.json  test.txt  test_pl.ipynb
data-sync-tool/docs/: data-sync-tool.drawio  detailed_design.md  rust_pitfalls.md  sync_engine_design_mvp.md  sync_engine_design_v2.md  task_executor_design.md  task_executor_impl_thoughts.md  thoughts.md  tsync_prototype.ipynb
data-sync-tool/docs/examples/: fake-derive.rs
data-sync-tool/docs/rust_guide/: design_patterns.md
data-sync-tool/docs/task_executor_gpt4/: error_message_analyzer.md  rate_limiter.md  task_error_handling.md  task_executor.md
data-sync-tool/migration/: Cargo.toml
data-sync-tool/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20231225_000002_create_sync_plan_table.rs  m20231225_000002_create_sync_task_table.rs
data-sync-tool/src/: lib.rs  main.rs
data-sync-tool/src/application/: mod.rs  sync_scheduling.rs  task_management.rs
data-sync-tool/src/application/synchronization/dtos/: task_manager.rs
data-sync-tool/src/common/: errors.rs
data-sync-tool/src/domain/: data_source.rs  mod.rs  repositories.rs  repository.rs
data-sync-tool/src/domain/arg_gen/: arg_template.rs  mod.rs  repository.rs
data-sync-tool/src/domain/arg_generation/: arg_gen.rs  mod.rs  repository.rs  template.rs
data-sync-tool/src/domain/data_source/: data_source.rs  dataset.rs  mod.rs  repository.rs
data-sync-tool/src/domain/data_source/value_object/: api_param.rs  data_schema.rs  field_type.rs  local_storage.rs  mod.rs
data-sync-tool/src/domain/data_synchronization/: mod.rs  repository.rs  sync_management.rs
data-sync-tool/src/domain/param_template/: mod.rs  param_template.rs  repository.rs
data-sync-tool/src/domain/sync/: mod.rs  repository.rs  sync_plan.rs
data-sync-tool/src/domain/synchronization/: custom_errors.rs  dtos.rs  mod.rs  rate_limiter.rs  repository.rs  sync_management.rs  sync_plan.rs  sync_task.rs  task_executor.rs
data-sync-tool/src/domain/synchronization/services/: interfaces.rs
data-sync-tool/src/domain/template_management/: mod.rs  template.rs
data-sync-tool/src/domain/value_object/: api_param.rs  data_schema.rs  mod.rs
data-sync-tool/src/entities/: api_param.rs  data_source.rs  dataset.rs
data-sync-tool/src/infrastructure/: mod.rs
data-sync-tool/src/infrastructure/db/: mod.rs
data-sync-tool/src/infrastructure/mq/: factory.rs  message_bus.rs  mod.rs  tokio_channel_mq.rs
data-sync-tool/src/infrastructure/sync/: error_analyzer.rs  factory.rs  mod.rs  shared_traits.rs  sync_rate_limiter.rs  task_executor.rs  task_manager copy.rs  task_manager.rs  worker.rs
data-sync-tool/src/infrastructure/sync_engine/: engine_controller.rs  engine_proxy.rs  message.rs  mod.rs
data-sync-tool/src/infrastructure/web/: mod.rs  request.rs
data-sync-tool/tests/: test_sync_engine.rs
fake-market-feed/: app.py
(+64 files in other folders)
