[package]
name = "data-sync-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = "0.4.23"
derivative = "2.2.0"
fake = {version = "2.5", features=['derive', 'chrono', 'uuid', ]}
getset = "0.1.2"
itertools = "0.10.5"
lazy_static = "1.4.0"
mockall = "0.11.3"
rand = "0.8.5"
readonly = "0.2.3"
regex = "1.7.1"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
sqlx = { version = "0.6.3", features = ['runtime-tokio-native-tls'] }
url = "2.3.1"
uuid = "1.3.0"
