[package]
name = "data-sync-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
async-trait = "0.1.68"
chrono = "0.4.23"
derivative = "2.2.0"
fake = {version = "2.5", features=['derive', 'chrono', 'uuid', ]}
getset = "0.1.2"
itertools = "0.10.5"
lazy_static = "1.4.0"
rand = "0.8.5"
rbatis = "4.3.2"
regex = "1.7.1"
reqwest = { version = "0.11.18", features = ["json"] }
tokio = { version = "1.28.1", features = ["full", "tracing"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
url = "2.3.1"
uuid = "1.3.0"
log = "0.4.19"
serde_urlencoded = "0.7.1"
futures = "0.3.28"
env_logger = { version = "0.10.0", features = ["auto-color", "color", "humantime"] }
tungstenite = "0.19.0"
# pretty_env_logger = "0.4"
