[package]
name = "data-sync-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
async-trait = "0.1.68"
chrono = "0.4.23"
derivative = "2.2.0"
fake = { version = "2.5", features = ['derive', 'chrono', 'uuid'] }
getset = "0.1.2"
itertools = "0.12.0"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.7.1"
reqwest = { version = "0.11.23", features = ["json"] }
tokio = { version = "1.35.1", features = ["full", "tracing"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
url = "2.3.1"
uuid = "1.3.0"
log = "0.4.19"
serde_urlencoded = "0.7.1"
futures = "0.3.28"
env_logger = { version = "0.10.0", features = [
    "auto-color",
    "color",
    "humantime",
] }
tungstenite = "0.21.0"
anyhow = "1.0.76"
tracing-subscriber = "0.3.17"
console-subscriber = "0.2.0"
serde_qs = "0.12.0"
tracing = "0.1.40"
mockall = "0.12.0"
fast_log = "1.6.10"
pretty_env_logger = "0.5.0"
sea-orm = { version = "0.12", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "debug-print",
    "with-chrono",
    "with-uuid",
    "with-json",
    "mock"
] }
swagger = "6.4.1"
poem = "1.2"
poem-openapi = { version = "3.0.6", features = ["swagger-ui"] }